# wasmer-go

./: Cargo.toml  go.mod
examples/wasi/: main.go
src/: lib.rs
