[package]
publish = false
name = "wasmer-go"
version = "1.0.4"
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2018"
description = "Go library to run WebAssembly binaries"
readme = "README.md"
repository = "https://github.com/wasmerio/wasmer-go"
keywords = ["golang", "extension", "webassembly"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmer-c-api = "=3.3.0"
tracing = { version = "0.1.37", default-features = false, features = ["log"] }

[features]
middlewares = ["wasmer-c-api/middlewares"]
wat = ["wasmer-c-api/wat"]
wasi = ["wasmer-c-api/wasi"]
compiler = ["wasmer-c-api/compiler"]
